[package]
name = "bluemoon_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"

tokio = { version = "1", features = ["full"] }
# serde = "*"
# serde_json = { version = "1.0.108" , features = ["derive"]}
# tracing = "0.1.40"
# tracing-subscriber = "0.3.0"
color-print = "0.3.5"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
sysinfo = "0.29.10"
once_cell = "1.18.0"
